2004-07-22  Jeffrey Stedfast  <fejj@novell.com>

	* e-shell-importer.c (e_shell_importer_start_import): Use
	stock_mail-import instead of stock_import? *shrug* Fixes bug
	#61778.

2004-07-08  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* Makefile.am:
	tarball should ship .schemas.in.in files, not generated files.

	* apps_evolution_shell.schemas.in.in:
	Don't translate default component id (bug #60859)

2004-07-06  Rodney Dawes  <dobey@novell.com>

	* e-shell-errors.xml.h: Add this back to CVS for translators
	* .cvsignore: Don't ignore e-shell-errors.xml.h

2004-06-24  Not Zed  <NotZed@Ximian.com>

	** See bug #57367.

	* e-shell-window.c (e_shell_window_new): fix gconf client leak and
	clean up some logic.
	
	* e-shell.c (e_shell_construct): dont activate the components
	individually, component registry does that implictly.

	* e-component-registry.c (init): dont call query_components here.
	(query_components): setup a run-once guard.  before adding a
	component info to the list, make sure we can activate it.
	(component_info_new): take the interface as a construct argument
	now.
	(e_component_registry_peek_list): perform the component list query
	if we haven't already.
	(e_component_registry_peek_info): same.
	(e_component_registry_activate): just always return
	the reffed component, it isn't added unless it was already activated.

2004-06-21  Chris Toshok  <toshok@ximian.com>

	* e-user-creatable-items-handler.c (impl_finalize): free
	priv->menu_xml.  plugs (big) leak.

2004-06-18  Jeffrey Stedfast  <fejj@novell.com>

	* main.c (main): Remove AUTOHELP option since GNOME adds this
	itself. Fixes bug #60374.
	(main): Before exiting from main(), call shutdown() routines.

2004-06-18  Radek Doulik  <rodo@ximian.com>

	* main.c (main): test for skip_warning_dialog value in gconf here
	and not in show_development_warning, otherwise we don't add or
	call idle_cb and evo will not run
	(show_development_warning): do not read skip_warning_dialog here
